--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -18,6 +18,7 @@
 
 .icon {
   fill: $color-fill-icon;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-link {
@@ -27,8 +28,7 @@
   border-radius: 4px;
   border: 1px solid $color-fill-icon;
   background-color: hsl(0, 0%, 100%);
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   height: 90px;
 
   @media screen and (min-width: 1200px) {
@@ -49,6 +49,9 @@
   }
 }
 .icon-clients {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   @media screen and (max-width: 767px) {
     flex-wrap: wrap;
     width: calc((100% - 2 * 30px) / 2);
