--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -62,10 +62,10 @@
   clip: rect(0 0 0 0);
   overflow: hidden;
 
-  &:checked + .empty-icon {
+  &:checked + .policy-label::before {
     border-color: transparent;
     background-color: $color-accent;
-    background-image: url(../images-psevdoelements/galochka.svg);
+    background-image: url(../images/images-psevdoelements/galochka.svg);
     background-size: contain;
     background-origin: border-box;
     fill: $color-primary-background;
@@ -73,46 +73,47 @@
   }
 }
 
-.empty-icon {
-  display: inline-block;
+.policy-label::before {
+  content: "";
+  display: block;
   width: 15px;
   height: 15px;
   border: 2px solid $color-border;
   border-radius: 2px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  align-items: center;
-  justify-content: center;
+  margin-right: 8.4px;
 }
 
-.agreement {
+.policy-label {
   display: flex;
-  align-items: center;
+  font-weight: 400;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: $color-primary-text;
   cursor: pointer;
-  label {
-    margin-left: 8.4px;
-    font-weight: 400;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: $color-primary-text;
-    cursor: pointer;
-
-    @media screen and (min-width: 480px) and (max-width: 1199px) {
-      font-size: $font-small;
-    }
-    @media screen and (min-width: 1200px) {
-      font-size: $font-primary;
-    }
+  text-align: left;
+  align-items: center;
+  @media screen and (min-width: 480px) and (max-width: 1199px) {
+    font-size: $font-small;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: $font-primary;
   }
 }
 
 .conditions {
-  margin-left: 8.4px;
   font-weight: 400;
   font-size: $font-primary;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: $color-accent-text;
   text-decoration: underline;
+  @media screen and (min-width: 480px) and (max-width: 1199px) {
+    font-size: $font-small;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: $font-primary;
+  }
 }
 
 .options {
@@ -128,4 +129,5 @@
   padding-left: 30px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
