--- a/sass/main.css
+++ b/sass/main.css
@@ -242,7 +242,6 @@ body {
 
 .site-nav .link:hover, .site-nav .link:focus {
   color: #2196f3;
-  outline: none;
 }
 
 .site-nav .link.current {
@@ -320,6 +319,7 @@ body {
 .contacts .link:hover,
 .contacts .link:focus {
   color: #2196f3;
+  fill: #2196f3;
 }
 
 .contacts .item .item {
@@ -559,8 +559,8 @@ body {
     padding-bottom: 118px;
     padding-top: 118px;
     background-size: 768px 400px;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images-psevdoelements/Header480.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images-psevdoelements/Header480.jpg);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/images-psevdoelements/Header480.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/images-psevdoelements/Header480.jpg);
   }
 }
 
@@ -576,15 +576,15 @@ body {
     padding-bottom: 118px;
     padding-top: 118px;
     background-size: 768px 400px;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images-psevdoelements/Header768.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images-psevdoelements/Header768.jpg);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/images-psevdoelements/Header768.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/images-psevdoelements/Header768.jpg);
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1199px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 2dppx) {
   .overlay .overlay {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images-psevdoelements/Header768@2x.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images-psevdoelements/Header768@2x.jpg);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/images-psevdoelements/Header768@2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/images-psevdoelements/Header768@2x.jpg);
   }
 }
 
@@ -592,16 +592,16 @@ body {
   .overlay {
     padding-bottom: 200px;
     padding-top: 200px;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images-psevdoelements/Img.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images-psevdoelements/Img.jpg);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/images-psevdoelements/Img.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/images-psevdoelements/Img.jpg);
     background-size: 1600px 600px;
   }
 }
 
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .overlay .overlay {
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images-psevdoelements/Img@2x.jpg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images-psevdoelements/Img@2x.jpg);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/images/images-psevdoelements/Img@2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/images/images-psevdoelements/Img@2x.jpg);
   }
 }
 
@@ -696,16 +696,19 @@ body {
 }
 
 .link-img {
-  display: inline-block;
+  display: block;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.flex-element:hover {
+.link-img:hover,
+.link-img:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.flex-element:hover .overlay-text,
-.flex-element:hover .overlay-text {
+.link-img:hover .overlay-text,
+.link-img:focus .overlay-text {
   display: block;
   -webkit-transform: translateY(0%);
           transform: translateY(0%);
@@ -802,6 +805,12 @@ body {
 
 .text-distance {
   padding: 20px 24px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .flex-element:first-child .text-distance {
+    padding-bottom: 60px;
+  }
 }
 
 .button {
@@ -1073,19 +1082,19 @@ body {
 }
 
 .icon-delivery::before {
-  background-image: url(../images-psevdoelements/antenna1.svg);
+  background-image: url(../images/images-psevdoelements/antenna1.svg);
 }
 
 .icon-clock::before {
-  background-image: url(../images-psevdoelements/clock.svg);
+  background-image: url(../images/images-psevdoelements/clock.svg);
 }
 
 .icon-diagram::before {
-  background-image: url(../images-psevdoelements/diagram.svg);
+  background-image: url(../images/images-psevdoelements/diagram.svg);
 }
 
 .icon-technology::before {
-  background-image: url(../images-psevdoelements/astronaut1.svg);
+  background-image: url(../images/images-psevdoelements/astronaut1.svg);
 }
 
 .work-title,
@@ -1369,71 +1378,74 @@ body {
   overflow: hidden;
 }
 
-.checkbox:checked + .empty-icon {
+.checkbox:checked + .policy-label::before {
   border-color: transparent;
   background-color: #2196f3;
-  background-image: url(../images-psevdoelements/galochka.svg);
+  background-image: url(../images/images-psevdoelements/galochka.svg);
   background-size: contain;
   background-origin: border-box;
   fill: #ffffff;
   background-repeat: no-repeat;
 }
 
-.empty-icon {
-  display: inline-block;
+.policy-label::before {
+  content: "";
+  display: block;
   width: 15px;
   height: 15px;
   border: 2px solid #212121;
   border-radius: 2px;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  margin-right: 8.4px;
 }
 
-.agreement {
+.policy-label {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  cursor: pointer;
-}
-
-.agreement label {
-  margin-left: 8.4px;
   font-weight: 400;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
   cursor: pointer;
+  text-align: left;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 @media screen and (min-width: 480px) and (max-width: 1199px) {
-  .agreement label {
+  .policy-label {
     font-size: 12px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .agreement label {
+  .policy-label {
     font-size: 14px;
   }
 }
 
 .conditions {
-  margin-left: 8.4px;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #2196f3;
   text-decoration: underline;
+}
+
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  .conditions {
+    font-size: 12px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .conditions {
+    font-size: 14px;
+  }
 }
 
 .options {
@@ -1449,6 +1461,8 @@ body {
   padding-left: 30px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-list {
@@ -1485,6 +1499,8 @@ body {
 
 .icon {
   fill: #afb1b8;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-link {
@@ -1500,8 +1516,8 @@ body {
   border-radius: 4px;
   border: 1px solid #afb1b8;
   background-color: white;
-  -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   height: 90px;
 }
 
@@ -1522,6 +1538,11 @@ body {
 .icon-link:hover .icon,
 .icon-link:focus .icon {
   fill: #2196f3;
+}
+
+.icon-clients {
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @media screen and (max-width: 767px) {
@@ -1577,7 +1598,7 @@ body {
 
 @media screen and (min-width: 768px) {
   .subscribe-footer {
-    margin-right: auto;
+    margin: auto;
     text-align: center;
     margin-top: 60px;
   }
@@ -1778,7 +1799,7 @@ body {
 }
 
 .invitation {
-  display: block;
+  display: inline-block;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -1786,7 +1807,7 @@ body {
   text-transform: uppercase;
   color: #ffffff;
   margin-bottom: 20px;
-  padding-top: 4px;
+  /*padding-top: 4px;*/
 }
 
 .social.invit {
@@ -1805,7 +1826,7 @@ body {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-.icon-social-link.invit:hover {
+.icon-social-link.invit:hover, .icon-social-link.invit:focus {
   background-color: #2196f3;
 }
 
@@ -1851,6 +1872,9 @@ body {
         flex-wrap: wrap;
     -ms-flex-pack: distribute;
         justify-content: space-around;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
   }
 }
 
@@ -1859,6 +1883,9 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
   }
 }
 
@@ -1952,13 +1979,11 @@ body {
   .joing {
     display: block;
     margin: 0;
-    padding-top: 10px;
+    /*padding-top: 10px;*/
     width: -webkit-min-content;
     width: -moz-min-content;
     width: min-content;
-    -webkit-box-align: left;
-        -ms-flex-align: left;
-            align-items: left;
+    text-align: left;
   }
 }
 
@@ -2012,7 +2037,6 @@ body {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-  z-index: 10;
 }
 
 @media screen and (max-width: 767px) {
@@ -2033,6 +2057,7 @@ body {
   }
   .menu-container.is-open {
     display: block;
+    z-index: 1;
   }
 }
 
