--- a/sass/components/_subscribe-footer.scss
+++ b/sass/components/_subscribe-footer.scss
@@ -17,13 +17,13 @@
     text-align: center;
   }
   @media screen and (min-width: 768px) {
-    margin: auto;
+    display: inline-block;
     text-align: center;
     margin-top: 60px;
   }
   @media screen and (min-width: 1200px) {
     margin-left: 93px;
-    margin-top: 12px;
+    margin-top: 9px;
     text-align: left;
   }
 }
