--- a/sass/portfolio.css
+++ b/sass/portfolio.css
@@ -737,7 +737,7 @@ body {
 
 @media screen and (min-width: 768px) {
   .subscribe-footer {
-    margin: auto;
+    display: inline-block;
     text-align: center;
     margin-top: 60px;
   }
@@ -746,7 +746,7 @@ body {
 @media screen and (min-width: 1200px) {
   .subscribe-footer {
     margin-left: 93px;
-    margin-top: 12px;
+    margin-top: 9px;
     text-align: left;
   }
 }
